--- a/source/index.html
+++ b/source/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="ru" class="page">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Device</title>
   <link rel="preload" href="./fonts/pt-mono-v8-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="./fonts/roboto-condensed-v19-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="./fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="./fonts/roboto-condensed-v19-latin_cyrillic-700.woff2" as="font" type="font/woff2"
+    crossorigin>
+  <link rel="preload" href="./fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2" as="font" type="font/woff2"
+    crossorigin>
   <link rel="preload" href="./fonts/roboto-v27-cyrillic-500.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
+
 <body class="page__body">
+  <div class="grid">
+    <div class="grid-overlay"></div>
+  </div>
+  <section class="hero">
+    <header class="header">
+      <div class="header__content page__container page__container--header">
+          <a class="logo logo--header header__logo">
+            <img src="./img/logo.svg" width="52" height="52" alt="Логотип компании">
+            <div class="logo__text">
+              <span class="logo__name">Smart Device</span>
+              <span class="logo__description">умные технологии</span>
+            </div>
+          </a>
+        <div class="contacts">
+          <a class="contacts__link contacts__link--email" href="mailto:info@sd.ru" aria-label="Написать нам info@sd.ru">
+            <svg width="19" height="14" viewbox="0 0 19 14" aria-hidden="true">
+              <use xlink:href="./img/sprite_auto.svg#icon-email">
+              </use>
+            </svg>
+            <span aria-hidden="true">info@sd.ru</span>
+
+          </a>
+
+          <a class="contacts__link contacts__link--phone" href="tel:+74950005252"
+            aria-label="Позвонить нам +7 (495) 000 52 52">
+              <svg width="18" height="18" viewbox="0 0 18 18" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-phone">
+                </use>
+              </svg>
+            <span aria-hidden="true">+7&nbsp;(495)&nbsp;000&nbsp;52&nbsp;52</span>
+          </a>
+        </div>
+        <a class="button header__callback">Заказать звонок</a>
+      </div>
+    </header>
+  </section>
 </body>
+
 </html>
