--- a/source/index.html
+++ b/source/index.html
@@ -16,11 +16,11 @@
 
 <body class="page__body">
   <div class="grid">
-    <div class="grid-overlay"></div>
+    <div class="grid-overlay2"></div>
   </div>
   <section class="hero">
     <header class="header">
-      <div class="header__content page__container page__container--header">
+      <div class="header__content page__container page__container--wide">
           <a class="logo logo--header header__logo">
             <img src="./img/logo.svg" width="52" height="52" alt="Логотип компании">
             <div class="logo__text">
@@ -30,17 +30,16 @@
           </a>
         <div class="contacts">
           <a class="contacts__link contacts__link--email" href="mailto:info@sd.ru" aria-label="Написать нам info@sd.ru">
-            <svg width="19" height="14" viewbox="0 0 19 14" aria-hidden="true">
+            <svg width="19" height="14" viewbox="0 0 19 14" fill="#00B2FF" aria-hidden="true">
               <use xlink:href="./img/sprite_auto.svg#icon-email">
               </use>
             </svg>
             <span aria-hidden="true">info@sd.ru</span>
-
           </a>
 
           <a class="contacts__link contacts__link--phone" href="tel:+74950005252"
             aria-label="Позвонить нам +7 (495) 000 52 52">
-              <svg width="18" height="18" viewbox="0 0 18 18" aria-hidden="true">
+              <svg width="18" height="18" viewbox="0 0 18 18" fill="#00B2FF" aria-hidden="true">
                 <use xlink:href="./img/sprite_auto.svg#icon-phone">
                 </use>
               </svg>
@@ -51,6 +50,241 @@
       </div>
     </header>
   </section>
+  <main>
+  </main>
+  <footer class="footer">
+    <div class="page__container page__container--wide">
+      <div class="footer__content">
+        <div class="footer__links">
+          <h2 class="page__a11y-hidden">Ссылки на страницы компании</h2>
+          <a class="logo logo--footer footer__logo">
+            <img src="./img/logo.svg" width="52" height="52" alt="Логотип компании">
+            <div class="logo__text">
+              <span class="logo__name logo__name--footer">Service Device</span>
+              <span class="logo__description">умные технологии</span>
+            </div>
+          </a>
+          <span class="footer__period footer__period--links">1999-2018 SD Service Devices</span>
+
+          <div class="footer__social">
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-fb"></use>
+              </svg>
+            </a>
+
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-ok"></use>
+              </svg>
+            </a>
+
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-vk"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <nav class="footer__nav">
+          <h2>Разделы сайта</h2>
+          <button class="footer__accordion-button" type="button" aria-label="Просмотреть список" aria-expanded="false">
+            <svg width="16" height="16" aria-hidden="true">
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--active"
+                xlink:href="./img/sprite_auto.svg#icon-plus"></use>
+              <use width="16" height="16" class="footer__accordion-icon" xlink:href="./img/sprite_auto.svg#icon-minus"></use>
+            </svg>
+          </button>
+          <ul>
+            <li>
+              <a href="#">
+                О компании
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Продукты
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Производство печатных плат
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Монтаж печатных плат
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Комплектующие
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Доставка
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__contacts">
+          <h2>Наш офис</h2>
+          <button class="footer__accordion-button" type="button" aria-label="Просмотреть список" aria-expanded="false">
+            <svg width="16" height="16" aria-hidden="true">
+              <use width="16" height="16" class="footer__accordion-icon"
+                xlink:href="./img/sprite_auto.svg#icon-plus"></use>
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--active" xlink:href="./img/sprite_auto.svg#icon-minus"></use>
+            </svg>
+          </button>
+          <ul>
+            <li>
+              г. Мытищи, Олимпийский <br aria-hidden="true"> проспект, д.10
+            </li>
+            <li>
+              <a href="tel:+74955894050">
+                +7&nbsp;(495)&nbsp;589-40-50
+              </a>
+            </li>
+            <li>
+              <a href="tel:+79250038767">
+                +7&nbsp;(925)&nbsp;003-87-67
+              </a>
+            </li>
+            <li>
+              <a href="tel:+792692608079">
+                +7&nbsp;(926)&nbsp;926-080-79
+              </a>
+            </li>
+          </ul>
+        </div>
+
+
+      </div>
+      <div class="footer__info">
+        <span class="footer__rights">Все права защищены</span>
+        <span class="footer__period">1999-2018 SD Service Devices</span>
+        <a class="footer__terms" href="#">Условия конфиденциальности</a>
+        <span class="footer__developed">Developed by wow studio </span>
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- <footer class="footer">
+    <div class="page__container page__container--wide">
+      <div class="footer__content">
+        <div class="footer__links">
+          <h2 class="page__a11y-hidden">Ссылки на страницы компании</h2>
+
+          <a class="logo logo--footer footer__logo">
+            <img src="./img/logo.svg" width="52" height="52" alt="Логотип компании">
+            <div class="logo__text">
+              <span class="logo__name logo__name--footer">Service Device</span>
+              <span class="logo__description">умные технологии</span>
+            </div>
+          </a>
+
+          <div class="footer__social">
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-fb"></use>
+              </svg>
+            </a>
+
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-ok"></use>
+              </svg>
+            </a>
+
+            <a href="#">
+              <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-vk"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="footer__helper">
+        <nav class="footer__nav">
+          <h2>Разделы сайта</h2>
+          <ul>
+            <li>
+              <a href="#">
+                О компании
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Продукты
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Производство печатных плат
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Монтаж печатных плат
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Комплектующие
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Доставка
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__contacts">
+          <h2>Наш офис</h2>
+          <ul>
+            <li>
+              г. Мытищи, Олимпийский проспект, д.10
+            </li>
+            <li>
+              <a href="tel:+74955894050">
+                +7&nbsp;(495)&nbsp;589-40-50
+              </a>
+            </li>
+            <li>
+              <a href="tel:+79250038767">
+                +7&nbsp;(925)&nbsp;003-87-67
+              </a>
+            </li>
+            <li>
+              <a href="tel:+792692608079">
+                +7&nbsp;(926)&nbsp;926-080-79
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+        <div class="footer__info">
+          <span class="footer__rights">Все права защищены</span>
+          <span class="footer__period">1999-2018 SD Service Devices</span>
+          <a class="footer__terms" href="#">Условия конфиденциальности</a>
+          <span class="footer__developed">Developed by wow studio </span>
+        </div>
+      </div>
+    </div>
+
+  </footer> -->
 </body>
 
 </html>
