--- a/source/index.html
+++ b/source/index.html
@@ -63,6 +63,45 @@
 
   </section>
   <main>
+    <section class="advantages">
+      <h2 class="page__a11y-hidden">Наши преимущества</h2>
+      <div class="page__container">
+        <ul>
+          <li>
+            <svg width="29" height="35" fill="currentColor" aria-hidden="true">
+              <use xlink:href="./img/sprite_auto.svg#icon-stopwatch"></use>
+            </svg>
+            <h3>Оперативные сроки</h3>
+            <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять
+              заказы плат и комплектующих в самые короткие сроки</p>
+          </li>
+          <li>
+            <svg width="35" height="35" fill="currentColor" aria-hidden="true">
+              <use xlink:href="./img/sprite_auto.svg#icon-hired"></use>
+            </svg>
+            <h3>Крупные поставщики</h3>
+            <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+              Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
+            </p>
+          </li>
+          <li>
+            <svg width="36" height="31" fill="currentColor" aria-hidden="true">
+              <use xlink:href="./img/sprite_auto.svg#icon-detective"></use>
+            </svg>
+            <h3>Полная конфиденциальность</h3>
+            <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
+          </li>
+          <li>
+            <svg width="35" height="35" fill="currentColor" aria-hidden="true">
+              <use xlink:href="./img/sprite_auto.svg#icon-tag"></use>
+            </svg>
+            <h3>Персонализация стоимости</h3>
+            <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+              устраивает.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="page__container page__container--wide">
