--- a/source/index.html
+++ b/source/index.html
@@ -56,14 +56,13 @@
           <span>Получить бесплатную консультацию</span>
           <b>Бесплатная консультация</b>
         </a>
-        <a href="#" class="hero__scroll">Скролл вниз</a>
-
+        <a href="#advantages" class="hero__scroll">Скролл вниз</a>
       </div>
     </div>
-
   </section>
   <main>
-    <section class="advantages">
+    <div class="page__decor">
+    <section class="advantages" id="advantages">
       <h2 class="page__a11y-hidden">Наши преимущества</h2>
       <div class="page__container">
         <ul>
@@ -96,12 +95,38 @@
               <use xlink:href="./img/sprite_auto.svg#icon-tag"></use>
             </svg>
             <h3>Персонализация стоимости</h3>
-            <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
-              устраивает.</p>
+            <p>
+              Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+              устраивает.
+            </p>
           </li>
         </ul>
       </div>
     </section>
+    <section class="about">
+      <div class="page__container">
+        <div class="about__content">
+            <div class="about__decor">
+              <span>2005</span>
+            </div>
+      <div class="about__info">
+        <h2>О компании</h2>
+        <p>
+          Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии <br aria-hidden="true"> с 1997
+          года. Выполняем срочные заказы и пилотные образцы до 10 дней.
+        </p>
+        <p>
+          Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные
+          платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<b>..</b><span> (РЖД), РоссАвтоПрома
+          (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</span>
+
+        </p>
+          <a class="button about__button" href="#">Подробнее</a>
+      </div>
+      </div>
+    </div>
+    </section>
+  </div>
   </main>
   <footer class="footer">
     <div class="page__container page__container--wide">
