--- a/source/index.html
+++ b/source/index.html
@@ -62,71 +62,104 @@
   </section>
   <main>
     <div class="page__decor">
-    <section class="advantages" id="advantages">
-      <h2 class="page__a11y-hidden">Наши преимущества</h2>
+      <section class="advantages" id="advantages">
+        <h2 class="page__a11y-hidden">Наши преимущества</h2>
+        <div class="page__container">
+          <ul>
+            <li>
+              <svg width="29" height="35" fill="currentColor" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-stopwatch"></use>
+              </svg>
+              <h3>Оперативные сроки</h3>
+              <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и
+                доставлять
+                заказы плат и комплектующих в самые короткие сроки</p>
+            </li>
+            <li>
+              <svg width="35" height="35" fill="currentColor" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-hired"></use>
+              </svg>
+              <h3>Крупные поставщики</h3>
+              <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+                Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
+              </p>
+            </li>
+            <li>
+              <svg width="36" height="31" fill="currentColor" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-detective"></use>
+              </svg>
+              <h3>Полная конфиденциальность</h3>
+              <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
+            </li>
+            <li>
+              <svg width="35" height="35" fill="currentColor" aria-hidden="true">
+                <use xlink:href="./img/sprite_auto.svg#icon-tag"></use>
+              </svg>
+              <h3>Персонализация стоимости</h3>
+              <p>
+                Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+                устраивает.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="about">
+        <div class="page__container">
+          <div class="about__content">
+            <div class="about__decor">
+              <span>2005</span>
+            </div>
+            <div class="about__info">
+              <h2>О компании</h2>
+              <p>
+                Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии
+                <br aria-hidden="true"> с 1997
+                года. Выполняем срочные заказы и пилотные образцы до 10 дней.
+              </p>
+              <p>
+                Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND.
+                Печатные
+                платы и комплектующие Service Devices применяются на предприятиях Российских Железных
+                Дорог<b>..</b><span> (РЖД), РоссАвтоПрома
+                  (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники
+                  России.</span>
+
+              </p>
+              <a class="button about__button" href="#">Подробнее</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="services">
       <div class="page__container">
+        <h2>Service Device предлагает следующие товары и услуги</h2>
         <ul>
-          <li>
-            <svg width="29" height="35" fill="currentColor" aria-hidden="true">
-              <use xlink:href="./img/sprite_auto.svg#icon-stopwatch"></use>
-            </svg>
-            <h3>Оперативные сроки</h3>
-            <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять
-              заказы плат и комплектующих в самые короткие сроки</p>
+          <li class="services__item services__item--production">
+            <a href="#">
+              <h3>
+                Производство печатных плат
+              </h3>
+            </a>
           </li>
-          <li>
-            <svg width="35" height="35" fill="currentColor" aria-hidden="true">
-              <use xlink:href="./img/sprite_auto.svg#icon-hired"></use>
-            </svg>
-            <h3>Крупные поставщики</h3>
-            <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
-              Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.
-            </p>
+          <li class="services__item services__item--install">
+            <a href="#">
+              <h3>
+                Монтаж печатных плат
+              </h3>
+            </a>
           </li>
-          <li>
-            <svg width="36" height="31" fill="currentColor" aria-hidden="true">
-              <use xlink:href="./img/sprite_auto.svg#icon-detective"></use>
-            </svg>
-            <h3>Полная конфиденциальность</h3>
-            <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
-          </li>
-          <li>
-            <svg width="35" height="35" fill="currentColor" aria-hidden="true">
-              <use xlink:href="./img/sprite_auto.svg#icon-tag"></use>
-            </svg>
-            <h3>Персонализация стоимости</h3>
-            <p>
-              Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
-              устраивает.
-            </p>
+          <li class="services__item services__item--components">
+            <a href="#">
+              <h3>
+                Комплектующие для светотехники
+              </h3>
+            </a>
           </li>
         </ul>
       </div>
     </section>
-    <section class="about">
-      <div class="page__container">
-        <div class="about__content">
-            <div class="about__decor">
-              <span>2005</span>
-            </div>
-      <div class="about__info">
-        <h2>О компании</h2>
-        <p>
-          Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии <br aria-hidden="true"> с 1997
-          года. Выполняем срочные заказы и пилотные образцы до 10 дней.
-        </p>
-        <p>
-          Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND. Печатные
-          платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<b>..</b><span> (РЖД), РоссАвтоПрома
-          (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</span>
-
-        </p>
-          <a class="button about__button" href="#">Подробнее</a>
-      </div>
-      </div>
-    </div>
-    </section>
-  </div>
   </main>
   <footer class="footer">
     <div class="page__container page__container--wide">
