--- a/source/index.html
+++ b/source/index.html
@@ -114,17 +114,14 @@
               <h2>О компании</h2>
               <p>
                 Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые технологии
-                <br aria-hidden="true"> с 1997
-                года. Выполняем срочные заказы и пилотные образцы до 10 дней.
+                с&nbsp;1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.
               </p>
               <p>
                 Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC, REFOND.
                 Печатные
                 платы и комплектующие Service Devices применяются на предприятиях Российских Железных
-                Дорог<b>..</b><span> (РЖД), РоссАвтоПрома
-                  (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники
-                  России.</span>
-
+                Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники
+                  России.
               </p>
               <a class="button about__button" href="#">Подробнее</a>
             </div>
