--- a/source/index.html
+++ b/source/index.html
@@ -312,7 +312,7 @@
       </div>
     </div>
   </footer>
-  <div class="popup">
+  <div class="popup" hidden>
   <div class="feedback-popup">
       <button class="feedback-popup__close" type="button">
       <svg width="17" height="17" fill="none" stroke="currentColor" aria-hidden="true">
@@ -347,6 +347,8 @@
     </form>
   </div>
 </div>
+<script src="./js/vendor.js"></script>
+
 </body>
 
 </html>
