--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,6 @@
 </head>
 
 <body class="page__body">
-  <div class="grid">
-    <div class="grid-overlay"></div>
-  </div>
   <section class="hero">
     <header class="header">
       <div class="header__content page__container page__container--wide">
@@ -45,7 +42,7 @@
             <span aria-hidden="true">+7&nbsp;(495)&nbsp;000&nbsp;52&nbsp;52</span>
           </a>
         </div>
-        <a class="button header__callback" href="#">Заказать звонок</a>
+        <a class="button header__callback" data-popup="feedback-popup" href="#">Заказать звонок</a>
       </div>
     </header>
     <div class="page__container page__container--hero">
@@ -226,15 +223,15 @@
         </div>
         <nav class="footer__nav">
           <h2>Разделы сайта</h2>
-          <button class="footer__accordion-button" type="button" aria-label="Просмотреть список" aria-expanded="false">
+          <button class="footer__accordion-button" type="button" data-accordion="nav" aria-label="Просмотреть список" aria-expanded="false" hidden>
             <svg width="16" height="16" aria-hidden="true">
-              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--active"
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--plus footer__accordion-icon--active"
                 xlink:href="./img/sprite_auto.svg#icon-plus"></use>
-              <use width="16" height="16" class="footer__accordion-icon" xlink:href="./img/sprite_auto.svg#icon-minus">
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--minus" xlink:href="./img/sprite_auto.svg#icon-minus">
               </use>
             </svg>
           </button>
-          <ul>
+          <ul class="footer__accordion footer__accordion--nav">
             <li>
               <a href="#">
                 О компании
@@ -274,15 +271,15 @@
         </nav>
         <div class="footer__contacts">
           <h2>Наш офис</h2>
-          <button class="footer__accordion-button" type="button" aria-label="Просмотреть список" aria-expanded="false">
+          <button class="footer__accordion-button" type="button" data-accordion="contacts" aria-label="Просмотреть список" aria-expanded="false" hidden>
             <svg width="16" height="16" aria-hidden="true">
-              <use width="16" height="16" class="footer__accordion-icon" xlink:href="./img/sprite_auto.svg#icon-plus">
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--plus footer__accordion-icon--active" xlink:href="./img/sprite_auto.svg#icon-plus">
               </use>
-              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--active"
+              <use width="16" height="16" class="footer__accordion-icon footer__accordion-icon--minus"
                 xlink:href="./img/sprite_auto.svg#icon-minus"></use>
             </svg>
           </button>
-          <ul>
+          <ul class="footer__accordion footer__accordion--contacts">
             <li>
               г. Мытищи, Олимпийский <br aria-hidden="true"> проспект, д.10
             </li>
@@ -312,9 +309,10 @@
       </div>
     </div>
   </footer>
-  <div class="popup" hidden>
+  <template id="feedback-popup">
+  <div class="popup">
   <div class="feedback-popup">
-      <button class="feedback-popup__close" type="button">
+      <button class="feedback-popup__close popup__close" type="button">
       <svg width="17" height="17" fill="none" stroke="currentColor" aria-hidden="true">
         <use xlink:href="./img/sprite_auto.svg#icon-cross">
         </use>
@@ -347,7 +345,9 @@
     </form>
   </div>
 </div>
+</template>
 <script src="./js/vendor.js"></script>
+<script src="./js/main.js"></script>
 
 </body>
 
