feat: добавь зацикливание таба в попапе

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="./fonts/roboto-condensed-v19-latin_cyrillic-regular.woff2" as="font" type="font/woff2"
     crossorigin>
   <link rel="preload" href="./fonts/roboto-v27-cyrillic-500.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="./css/style.min.css?v2">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body class="page__body">
@@ -168,8 +168,9 @@
               <span>Мы проконсультируем Вас бесплатно</span>
               <div class="feedback-form__content">
                 <input type="text" name="user-name" placeholder="Имя" required autocomplete="off">
-                <input class="masked prefixed" type="tel" name="user-phone" data-pattern="+*(***)***-**-**" data-prefix="+7("
-                data-error="Номер телефона должен быть вида +7(123)456-78-90" placeholder="Телефон" required autocomplete="off">
+                <input class="masked prefixed" type="tel" name="user-phone" data-pattern="+*(***)***-**-**"
+                  data-prefix="+7(" data-error="Номер телефона должен быть вида +7(123)456-78-90" placeholder="Телефон"
+                  required autocomplete="off">
                 <textarea name="user-feedback" cols="30" rows="10" placeholder="Ваш вопрос"></textarea>
                 <button class="button feedback-form__button" type="submit">Задать вопрос</button>
                 <div class="feedback-form__agreement">
@@ -203,17 +204,17 @@
           </a>
           <span class="footer__period footer__period--links">1999-2018 SD Service Devices</span>
           <div class="footer__social">
-            <a href="#">
+            <a href="#"><span class="page__a11y-hidden">Мы в фейсбук</span>
               <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
                 <use xlink:href="./img/sprite_auto.svg#icon-fb"></use>
               </svg>
             </a>
-            <a href="#">
+            <a href="#"> <span class="page__a11y-hidden">Мы в одноклассниках</span>
               <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
                 <use xlink:href="./img/sprite_auto.svg#icon-ok"></use>
               </svg>
             </a>
-            <a href="#">
+            <a href="#"> <span class="page__a11y-hidden">Мы во в контакте</span>
               <svg width="27" height="27" fill="#CDCDCD" aria-hidden="true">
                 <use xlink:href="./img/sprite_auto.svg#icon-vk"></use>
               </svg>
@@ -223,8 +224,8 @@
         <nav class="footer__nav">
           <div class="footer__header-wrapper">
             <h2>Разделы сайта</h2>
-            <button class="footer__accordion-button" type="button" data-accordion="nav" aria-label="Просмотреть список"
-              aria-expanded="false" hidden>
+            <button class="footer__accordion-button" type="button" data-accordion="nav"
+              aria-label="Список разделов сайта" aria-expanded="false" aria-controls="nav" hidden>
               <svg width="16" height="16" aria-hidden="true" fill="currentColor">
                 <use width="16" height="16"
                   class="footer__accordion-icon footer__accordion-icon--plus footer__accordion-icon--active"
@@ -235,10 +236,15 @@
               </svg>
             </button>
           </div>
-          <ul class="footer__accordion footer__accordion--nav">
+          <ul class="footer__accordion footer__accordion--nav" id="nav">
             <li>
               <a href="#about">
                 О компании
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Комплектующие
               </a>
             </li>
             <li>
@@ -248,27 +254,22 @@
             </li>
             <li>
               <a href="#">
-                Производство печатных плат
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Монтаж печатных плат
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Комплектующие
-              </a>
-            </li>
-            <li>
-              <a href="#">
                 Доставка
               </a>
             </li>
             <li>
               <a href="#">
+                Производство печатных плат
+              </a>
+            </li>
+            <li>
+              <a href="#">
                 Контакты
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Монтаж печатных плат
               </a>
             </li>
           </ul>
@@ -277,7 +278,7 @@
           <div class="footer__header-wrapper">
             <h2>Наш офис</h2>
             <button class="footer__accordion-button" type="button" data-accordion="contacts"
-              aria-label="Просмотреть список" aria-expanded="false" hidden>
+              aria-label="Как с нами связаться" aria-expanded="false" aria-controls="office" hidden>
               <svg width="16" height="16" aria-hidden="true" fill="currentColor">
                 <use width="16" height="16"
                   class="footer__accordion-icon footer__accordion-icon--plus footer__accordion-icon--active"
@@ -288,7 +289,7 @@
               </svg>
             </button>
           </div>
-          <ul class="footer__accordion footer__accordion--contacts">
+          <ul class="footer__accordion footer__accordion--contacts" id="office">
             <li>
               г. Мытищи, Олимпийский <br aria-hidden="true"> проспект, д.10
             </li>
@@ -321,12 +322,6 @@
   <template id="feedback-popup">
     <div class="popup">
       <div class="feedback-popup">
-        <button class="feedback-popup__close popup__close" type="button">
-          <svg width="17" height="17" fill="none" stroke="currentColor" aria-hidden="true">
-            <use xlink:href="./img/sprite_auto.svg#icon-cross">
-            </use>
-          </svg>
-        </button>
         <form name="feedback" action="https://echo.htmlacademy.ru" method="GET">
           <fieldset>
             <legend>
@@ -335,8 +330,8 @@
             <span>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</span>
             <div class="feedback-popup__content">
               <input type="text" name="user-name" placeholder="Имя" autocomplete="off" required>
-              <input class="masked prefixed" type="tel" name="user-phone" data-pattern="+*(***)***-**-**" data-prefix="+7("
-              placeholder="Телефон" required autocomplete="off">
+              <input class="masked prefixed" type="tel" name="user-phone" data-pattern="+*(***)***-**-**"
+                data-prefix="+7(" placeholder="Телефон" required autocomplete="off">
               <textarea name="user-feedback" cols="30" rows="10" placeholder="Ваш вопрос"></textarea>
               <button class="button feedback-popup__button" type="submit">Отправить</button>
               <div class="feedback-popup__agreement">
@@ -352,6 +347,12 @@
             </div>
           </fieldset>
         </form>
+        <button class="feedback-popup__close popup__close" type="button">
+          <svg width="17" height="17" fill="none" stroke="currentColor" aria-hidden="true">
+            <use xlink:href="./img/sprite_auto.svg#icon-cross">
+            </use>
+          </svg>
+        </button>
       </div>
     </div>
   </template>
