fix: исправь отображение картинки в блоке about

--- a/source/index.html
+++ b/source/index.html
@@ -177,12 +177,12 @@
                 <div class="feedback-form__agreement">
                   <input id="feedback-form__agree" type="checkbox" name="agree" checked required>
                   <label for="feedback-form__agree">
-                    <div class="feedback-form__checkbox">
+                    <span class="feedback-form__checkbox">
                       <svg width="10" height="7" fill="none" stroke="currentColor" aria-hidden="true">
                         <use xlink:href="./img/sprite_auto.svg#icon-check">
                         </use>
                       </svg>
-                    </div>
+                    </span>
                     Я согласен на обработку персональных данных</label>
                 </div>
               </div>
@@ -339,12 +339,12 @@
               <div class="feedback-popup__agreement">
                 <input id="feedback-popup__agree" type="checkbox" name="agree" checked required>
                 <label for="feedback-popup__agree">
-                  <div class="feedback-popup__checkbox">
+                  <span class="feedback-popup__checkbox">
                     <svg width="10" height="7" fill="none" stroke="currentColor" aria-hidden="true">
                       <use xlink:href="./img/sprite_auto.svg#icon-check">
                       </use>
                     </svg>
-                  </div>
+                  </span>
                   Я согласен на обработку персональных данных</label>
               </div>
             </div>
